Fixed community boxes being right aligned

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -279,6 +279,7 @@ span .status {
     width: 225px;
     height: 100px;
     overflow: hidden;
+    text-align: center;
 }
 
 .smallbox a {
